src/test/resources/entity_test/invalid/Employee6.entity
Entity{id:integer;name:string}